Fixing some time, when double click on nav, it will lead to white space
Fixed white space bug

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -217,7 +217,6 @@ html, body {
 		.specialty {
 			width: 100%;
 			height: 30%;
-			background-color: white;
 
 			p {
 				font-size: 2.5em;
